--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection":"Data source=datingapp.db"
   },
+  "TokenKey": "SecurityKey of the DateApp to test security",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
