--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0"/>
   </ItemGroup>
 </Project>
