--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=datingapp.db"
+    "DefaultConnection":"Server=localhost; Port=5432; User Id=appuser; Password=W@ll@c3App; Database=datingapp"
   },
   "TokenKey": "SecurityKey of the DateApp to test security",
   "Logging": {
