--- a/API/API.csproj
+++ b/API/API.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.14.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.2"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2"/>
   </ItemGroup>
 </Project>
