--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,13 +1,15 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection":"Server=localhost; Port=5432; User Id=appuser; Password=W@ll@c3App; Database=datingapp"
-  },
-  "TokenKey": "SecurityKey of the DateApp to test security",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=W@ll@c3App; Database=datingapp"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Information",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"CloudinarySettings": {
+		"CloudName": "wastoo"
+	}
 }
