--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,6 @@
 	"CloudinarySettings": {
 		"CloudName": "wastoo"
 	},
+	"TokenKey": "SecurityKey of the DateApp to test security",
 	"AllowedHosts": "*"
 }
