Fix for messages and photos

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,7 +7,9 @@
 		}
 	},
 	"CloudinarySettings": {
-		"CloudName": "wastoo"
+		"CloudName": "wastoo",
+		"ApiKey": "",
+		"ApiSecret": ""
 	},
 	"TokenKey": "SecurityKey of the DateApp to test security",
 	"AllowedHosts": "*"
