--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,15 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
+    "@angular-material-extensions/google-maps-autocomplete": "^6.2.0",
     "@angular/animations": "~11.0.9",
     "@angular/cdk": "^11.1.0",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
     "@angular/forms": "~11.0.9",
+    "@angular/material": "^11.1.0",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
@@ -27,17 +30,20 @@
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-spinner": "^10.0.1",
     "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "wft-geodb-angular-client": "^5.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.7",
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
